Testing/compilefail/TMP_ToolsError1.cc
// Copyright András Vukics 2006–2015. Distributed under the Boost Software License, Version 1.0. (See accompanying file LICENSE.txt)
#include "TMP_Tools.h"

// Explicit instantiation should not compile:

template struct tmptools::Vector<2,3,-1,5>;

